--- a/app/src/main/res/layout/item_onboards.xml
+++ b/app/src/main/res/layout/item_onboards.xml
@@ -36,7 +36,7 @@
                 android:layout_marginTop="64dp"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="64dp"
-                android:scaleType="matrix"
+                android:scaleType="centerInside"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
