--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,9 @@
 
         <item name="windowSplashScreenAnimationDuration">500</item>
 
+        <item name="android:statusBarColor">@color/BlazingOrange</item>
+        <item name="android:windowLightStatusBar">true</item>
+
     </style>
 
     <style name="Theme.AndroidLesson21" parent="Base.Theme.AndroidLesson21" />
